[package]
name = "shell"
version = "0.1.0"
authors = ["Nikolay Govorov <nikolay_govorov@bk.ru>"]
edition = "2018"

[dependencies]
dirs = "1.0.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
    "prepush-hook", "precommit-hook", "postmerge-hook",
    "run-cargo-test", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"
]
